--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
          </dependency>
+         <!--fasterxml  -->
+          <dependency>
+         	 <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+         </dependency>
 		<!--  热部署-->
 		<dependency>
     <groupId>org.springframework.boot</groupId>
