添加图片管理

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
     <artifactId>spring-boot-devtools</artifactId>
     <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
 	</dependency>
+		<dependency>
+		    <groupId>com.xjx</groupId>
+				<artifactId>util</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
