--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-mybatis.typeAliasesPackage=zxy.demo.springboot.boot_feature.entity
-mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.typeAliasesPackage=classpath*:com.xjxspace.model/**/*.java
+mybatis.mapperLocations=classpath*:com.xjxspace.mapper/**/*.xml
